[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Asteroid/Asteroid.tscn" type="PackedScene" id=5]
[ext_resource path="res://Backgrounds/blue.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Trailer Park Girl.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0.14902, 0.878431, 0.105882, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 1
outline_color = Color( 0.894531, 0.0943451, 0.0943451, 1 )
font_data = ExtResource( 7 )

[node name="Level_1" type="Node2D"]
__meta__ = {
"_editor_description_": "The root of the scene"
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1023.0
margin_bottom = 601.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Asteroid_Container" type="Node2D" parent="."]

[node name="Asteroid" parent="Asteroid_Container" instance=ExtResource( 5 )]
position = Vector2( 100, 100 )

[node name="Asteroid2" parent="Asteroid_Container" instance=ExtResource( 5 )]
position = Vector2( 800, 500 )

[node name="Effects" type="Node2D" parent="."]

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="Enemy" parent="Enemy_Container" instance=ExtResource( 4 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/HUD"]
margin_right = 1024.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI/HUD"]
margin_right = 1024.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI/HUD"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 6 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/HUD"]
autostart = true

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Menu"]
margin_right = 1024.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart Game" type="Button" parent="UI/Menu"]
margin_left = 448.0
margin_top = 352.0
margin_right = 589.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 2 )
text = "Restart Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Menu"]
margin_left = 448.0
margin_top = 400.0
margin_right = 589.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="UI/HUD/Timer" to="UI/HUD" method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/Menu/Restart Game" to="UI/Menu" method="_on_Restart_Game_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_Quit_pressed"]
